# ResolvingGhidra

./: .classpath  .gitignore  .project  README.md  run.bat  script.bat
client/: CMakeLists.txt  itree.cpp  itree.h  main.cpp  run.bat  searching.cpp  searching.h
dlls/: dll.json  exports.json
ghidra_repo.rep/: project.prp
ghidra_repo.rep/idata/: _mur_mur_hash2_a.exe.prp
ghidra_scripts/: Emulate.java  InstructionAnalyzer.java  capa_emu.py  emulate.java  emulate_by_step_observation.java  emulate_to_end.java
samples/: API_hashing_2
